{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 80,
  "lineage": "8f8fd8e3-9eb0-08ee-5af0-3f8cdc69003b",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00",
            "arn_suffix": "app/devops-demo-alb/6dac16628dd21e00",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-demo-alb-221398223.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-demo-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0c1b434415ff989a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01af3b3899d558fa8"
              },
              {
                "subnet_id": "subnet-01dc8bd63caa1e25a"
              }
            ],
            "subnets": [
              "subnet-01af3b3899d558fa8",
              "subnet-01dc8bd63caa1e25a"
            ],
            "vpc_id": "vpc-01df0d2139891b450",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "appointment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-appointment-tg/75b995035a5f6931",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener-rule/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d/3fec46600d6a98f7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/appointment"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener-rule/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d/3fec46600d6a98f7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d",
            "priority": 100,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_listener.this",
            "module.ecs.aws_lb_target_group.appointment",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "patient",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-patient-tg/0371ae65d8ed2c9d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener-rule/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d/14885510aab133b9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/patient"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener-rule/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d/14885510aab133b9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:listener/app/devops-demo-alb/6dac16628dd21e00/bd37fd3ee768417d",
            "priority": 200,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_listener.this",
            "module.ecs.aws_lb_target_group.patient",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "appointment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-appointment-tg/75b995035a5f6931",
            "arn_suffix": "targetgroup/devops-demo-appointment-tg/75b995035a5f6931",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-appointment-tg/75b995035a5f6931",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-demo-appointment-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "patient",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-patient-tg/0371ae65d8ed2c9d",
            "arn_suffix": "targetgroup/devops-demo-patient-tg/0371ae65d8ed2c9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:373649774472:targetgroup/devops-demo-patient-tg/0371ae65d8ed2c9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:373649774472:loadbalancer/app/devops-demo-alb/6dac16628dd21e00"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-demo-patient-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05593e5c898b80bc0",
            "arn": "arn:aws:ec2:ap-south-1:373649774472:elastic-ip/eipalloc-05593e5c898b80bc0",
            "association_id": "eipassoc-03719c3352c8e6acc",
            "domain": "vpc",
            "id": "eipalloc-05593e5c898b80bc0",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e70674dec0d63a6b",
            "private_dns": "ip-10-0-1-86.ap-south-1.compute.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-13-126-83-240.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.83.240",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-nat-eip"
            },
            "tags_all": {
              "Name": "devops-demo-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:internet-gateway/igw-0acbf7cf978aaf0d8",
            "id": "igw-0acbf7cf978aaf0d8",
            "owner_id": "373649774472",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-igw"
            },
            "tags_all": {
              "Name": "devops-demo-igw"
            },
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05593e5c898b80bc0",
            "association_id": "eipassoc-03719c3352c8e6acc",
            "connectivity_type": "public",
            "id": "nat-0622e44811eef2c50",
            "network_interface_id": "eni-0e70674dec0d63a6b",
            "private_ip": "10.0.1.86",
            "public_ip": "13.126.83.240",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01af3b3899d558fa8",
            "tags": {
              "Name": "devops-demo-nat"
            },
            "tags_all": {
              "Name": "devops-demo-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:route-table/rtb-010e8eb54d104fbb0",
            "id": "rtb-010e8eb54d104fbb0",
            "owner_id": "373649774472",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0622e44811eef2c50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-demo-private-rt"
            },
            "tags_all": {
              "Name": "devops-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:route-table/rtb-06a7cbeed5654e43e",
            "id": "rtb-06a7cbeed5654e43e",
            "owner_id": "373649774472",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acbf7cf978aaf0d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-demo-public-rt"
            },
            "tags_all": {
              "Name": "devops-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09846403d6c836cb1",
            "region": "ap-south-1",
            "route_table_id": "rtb-010e8eb54d104fbb0",
            "subnet_id": "subnet-0b33608c0124d6e91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c65ef5e5d54d82df",
            "region": "ap-south-1",
            "route_table_id": "rtb-010e8eb54d104fbb0",
            "subnet_id": "subnet-075013176da03b460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20d8417a387fa87",
            "region": "ap-south-1",
            "route_table_id": "rtb-06a7cbeed5654e43e",
            "subnet_id": "subnet-01af3b3899d558fa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e8758ccff6b37c8",
            "region": "ap-south-1",
            "route_table_id": "rtb-06a7cbeed5654e43e",
            "subnet_id": "subnet-01dc8bd63caa1e25a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:subnet/subnet-0b33608c0124d6e91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b33608c0124d6e91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373649774472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-private-1"
            },
            "tags_all": {
              "Name": "devops-demo-private-1"
            },
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:subnet/subnet-075013176da03b460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075013176da03b460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373649774472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-private-2"
            },
            "tags_all": {
              "Name": "devops-demo-private-2"
            },
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:subnet/subnet-01af3b3899d558fa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01af3b3899d558fa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373649774472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-public-1"
            },
            "tags_all": {
              "Name": "devops-demo-public-1"
            },
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:subnet/subnet-01dc8bd63caa1e25a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc8bd63caa1e25a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373649774472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-public-2"
            },
            "tags_all": {
              "Name": "devops-demo-public-2"
            },
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:vpc/vpc-01df0d2139891b450",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076070d8b44ca47cb",
            "default_route_table_id": "rtb-0ffa89c6df4d0303a",
            "default_security_group_id": "sg-0a77a6bef6ff098b0",
            "dhcp_options_id": "dopt-0e1f0b53b41c3ee73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01df0d2139891b450",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffa89c6df4d0303a",
            "owner_id": "373649774472",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-demo-vpc"
            },
            "tags_all": {
              "Name": "devops-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:security-group/sg-0c1b434415ff989a3",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1b434415ff989a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "373649774472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:373649774472:security-group/sg-06188234ce7dea21b",
            "description": "Allow port 3000 from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06188234ce7dea21b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c1b434415ff989a3"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-demo-app-sg",
            "name_prefix": "",
            "owner_id": "373649774472",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01df0d2139891b450"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}